force-app/main/default/objects/AllRecibidos__c/AllRecibidos__c.object-meta.xml
<CustomObject>
    <label>Recibos</label>
    <nameField>
        <displayFormat>R-{00000000}</displayFormat>
        <label>Nombre de All Recibidos</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recibos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>