force-app/main/default/objects/AllRecibidos__c/fields/Banco__c.field-meta.xml
<CustomField>
    <fullName>Banco__c</fullName>
    <label>Banco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bac</fullName>
            </value>
            <value>
                <fullName>Lafise</fullName>
            </value>
            <value>
                <fullName>Banpro</fullName>
            </value>
            <value>
                <fullName>Avanz</fullName>
            </value>
            <value>
                <fullName>Ficohsa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>