force-app/main/default/objects/AllRecibidos__c/fields/C_digo_de_caja__c.field-meta.xml
<CustomField>
    <fullName>C_digo_de_caja__c</fullName>
    <label>Código de caja</label>
    <length>10</length>
    <type>Text</type>
</CustomField>