force-app/main/default/objects/AllRecibidos__c/fields/C_digo_moneda_recibida__c.field-meta.xml
<CustomField>
    <fullName>C_digo_moneda_recibida__c</fullName>
    <label>Código moneda recibida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>COR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>