force-app/main/default/objects/AllRecibidos__c/fields/C_digo_tipo_de_recibo__c.field-meta.xml
<CustomField>
    <fullName>C_digo_tipo_de_recibo__c</fullName>
    <defaultValue>&quot;PR&quot;</defaultValue>
    <label>Código tipo de recibo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>