force-app/main/default/objects/AllRecibidos__c/fields/Codigo_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_Cliente__c</fullName>
    <formula>Cuenta__r.CodigoCliente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codigo de Cliente</label>
    <type>Text</type>
</CustomField>