force-app/main/default/objects/AllRecibidos__c/fields/Codigocompania__c.field-meta.xml
<CustomField>
    <fullName>Codigocompania__c</fullName>
    <label>Código de compañía</label>
    <length>10</length>
    <type>Text</type>
</CustomField>