force-app/main/default/objects/AllRecibidos__c/fields/CodigoInstrumentoPago__c.field-meta.xml
<CustomField>
    <fullName>CodigoInstrumentoPago__c</fullName>
    <label>Código de instrumento de pago</label>
    <length>10</length>
    <type>Text</type>
</CustomField>