force-app/main/default/objects/AllRecibidos__c/fields/CodigoLinea__c.field-meta.xml
<CustomField>
    <fullName>CodigoLinea__c</fullName>
    <label>Código de Línea</label>
    <length>10</length>
    <type>Text</type>
</CustomField>