force-app/main/default/objects/AllRecibidos__c/fields/CodigoSucursal__c.field-meta.xml
<CustomField>
    <fullName>CodigoSucursal__c</fullName>
    <label>Código de Sucursal</label>
    <length>10</length>
    <type>Text</type>
</CustomField>