force-app/main/default/objects/AllRecibidos__c/fields/CodigoUnidadNegocio__c.field-meta.xml
<CustomField>
    <fullName>CodigoUnidadNegocio__c</fullName>
    <label>Código de unidad de negocio</label>
    <length>10</length>
    <type>Text</type>
</CustomField>