force-app/main/default/objects/AllRecibidos__c/fields/Compa_a__c.field-meta.xml
<CustomField>
    <fullName>Compa_a__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compañía</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Companias</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Recibos</relationshipLabel>
    <relationshipName>All_Recibidos</relationshipName>
    <type>Lookup</type>
</CustomField>