force-app/main/default/objects/AllRecibidos__c/fields/Concepto__c.field-meta.xml
<CustomField>
    <fullName>Concepto__c</fullName>
    <label>Concepto del recibo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>