force-app/main/default/objects/AllRecibidos__c/fields/Equivalante__c.field-meta.xml
<CustomField>
    <fullName>Equivalante__c</fullName>
    <label>Equivalante</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>