force-app/main/default/objects/AllRecibidos__c/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <label>Fecha del registro del recibo</label>
    <type>Date</type>
</CustomField>