force-app/main/default/objects/AllRecibidos__c/fields/Incluir_Informe_Negociacion__c.field-meta.xml
<CustomField>
    <fullName>Incluir_Informe_Negociacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el recibo será incluido en el Informe de negociación.</description>
    <label>Incluir a Informe de Negociación</label>
    <type>Checkbox</type>
</CustomField>