force-app/main/default/objects/AllRecibidos__c/fields/Informe_de_Negociaci_n__c.field-meta.xml
<CustomField>
    <fullName>Informe_de_Negociaci_n__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Informe de Negociación</label>
    <referenceTo>Informe_de_Negociaci_n__c</referenceTo>
    <relationshipName>All_Recibidos</relationshipName>
    <type>Lookup</type>
</CustomField>