force-app/main/default/objects/AllRecibidos__c/fields/Instrumento_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Instrumento_de_pago__c</fullName>
    <label>Instrumento de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Efectivo</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Tarjeta de credito</fullName>
            </value>
            <value>
                <fullName>Deposito bancario</fullName>
            </value>
            <value>
                <fullName>Transferencia</fullName>
            </value>
            <value>
                <fullName>Carta banco</fullName>
            </value>
            <value>
                <fullName>Credito/Orden de compra</fullName>
            </value>
            <value>
                <fullName>Intercambio Autolote</fullName>
            </value>
            <value>
                <fullName>Consumo Interno</fullName>
            </value>
            <value>
                <fullName>Financiamiento FIDEM</fullName>
            </value>
            <value>
                <fullName>Nota de debito</fullName>
                <label>Nota de débito</label>
            </value>
            <value>
                <fullName>Nota de credito</fullName>
                <label>Nota de crédito</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>