force-app/main/default/objects/AllRecibidos__c/fields/Kilometraje_Intercambio__c.field-meta.xml
<CustomField>
    <fullName>Kilometraje_Intercambio__c</fullName>
    <label>Kilometraje</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>