force-app/main/default/objects/AllRecibidos__c/fields/Marca_intercambio__c.field-meta.xml
<CustomField>
    <fullName>Marca_intercambio__c</fullName>
    <label>Marca</label>
    <length>50</length>
    <type>Text</type>
</CustomField>