force-app/main/default/objects/AllRecibidos__c/fields/Monto_recibido__c.field-meta.xml
<CustomField>
    <fullName>Monto_recibido__c</fullName>
    <label>Monto recibido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>