force-app/main/default/objects/AllRecibidos__c/fields/MontoAplicado__c.field-meta.xml
<CustomField>
    <fullName>MontoAplicado__c</fullName>
    <label>Monto aplicado en el recibo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>