force-app/main/default/objects/AllRecibidos__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo reflejado en el recibo</label>
    <length>64</length>
    <type>Text</type>
</CustomField>