force-app/main/default/objects/AllRecibidos__c/fields/NIO__c.field-meta.xml
<CustomField>
    <fullName>NIO__c</fullName>
    <formula>Informe_de_Negociaci_n__r.Tasa_Cambio__c  *  MontoAplicado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NIO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>