force-app/main/default/objects/AllRecibidos__c/fields/Nombre_del_cliente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_cliente__c</fullName>
    <formula>IF( Cuenta__r.IsPersonAccount , 
    Cuenta__r.FirstName &amp; &quot; &quot; &amp; Cuenta__r.MiddleName &amp; &quot; &quot; &amp; Cuenta__r.LastName, 
    Cuenta__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del cliente</label>
    <type>Text</type>
</CustomField>