force-app/main/default/objects/AllRecibidos__c/fields/NumeroRecibido__c.field-meta.xml
<CustomField>
    <fullName>NumeroRecibido__c</fullName>
    <label>Número de recibo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>