force-app/main/default/objects/AllRecibidos__c/fields/Refer1__c.field-meta.xml
<CustomField>
    <fullName>Refer1__c</fullName>
    <label>Refer1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>