force-app/main/default/objects/AllRecibidos__c/fields/Refer2__c.field-meta.xml
<CustomField>
    <fullName>Refer2__c</fullName>
    <label>Refer2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>