force-app/main/default/objects/AllRecibidos__c/fields/Refer3__c.field-meta.xml
<CustomField>
    <fullName>Refer3__c</fullName>
    <label>Refer3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>