force-app/main/default/objects/AllRecibidos__c/fields/Saldo_aplicado__c.field-meta.xml
<CustomField>
    <fullName>Saldo_aplicado__c</fullName>
    <label>Saldo total aplicado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>