force-app/main/default/objects/AllRecibidos__c/fields/Saldo_disponible__c.field-meta.xml
<CustomField>
    <fullName>Saldo_disponible__c</fullName>
    <formula>IF(ISPICKVAL(C_digo_moneda_recibida__c , &quot;COR&quot;),
   Saldo__c /  Tasa__c - Suma_de_montos_aplicados__c, 
   Saldo__c -  Suma_de_montos_aplicados__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo disponible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>