force-app/main/default/objects/AllRecibidos__c/fields/Suma_de_montos_aplicados__c.field-meta.xml
<CustomField>
    <fullName>Suma_de_montos_aplicados__c</fullName>
    <label>Suma de montos aplicados</label>
    <summarizedField>Recibos_de_la_negociaci_n__c.Monto_aplicado_a_la_negociaci_n__c</summarizedField>
    <summaryForeignKey>Recibos_de_la_negociaci_n__c.Recibos__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>