force-app/main/default/objects/AllRecibidos__c/fields/Tasa_de_Cambio__c.field-meta.xml
<CustomField>
    <fullName>Tasa_de_Cambio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Solo relaciona al objeto Exchange by Rate, para poder calcular las Cordobas Nicaragüenses en el campo Cordobas.</description>
    <label>Tasa de Cambio</label>
    <referenceTo>Exchange_Rate_By_Date__c</referenceTo>
    <relationshipName>All_Recibidos</relationshipName>
    <type>Lookup</type>
</CustomField>