force-app/main/default/objects/AllRecibidos__c/fields/Vehiculo__c.field-meta.xml
<CustomField>
    <fullName>Vehiculo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehículo</label>
    <referenceTo>Vehiculo__c</referenceTo>
    <relationshipLabel>Recibos</relationshipLabel>
    <relationshipName>Recibos</relationshipName>
    <type>Lookup</type>
</CustomField>