force-app/main/default/objects/AllRecibidos__c/recordTypes/Ajuste_Bancario.recordType-meta.xml
<RecordType>
    <fullName>Ajuste_Bancario</fullName>
    <active>true</active>
    <description>Para crear un recibo de Tipo Bancario</description>
    <label>Ajuste Bancario</label>
</RecordType>