force-app/main/default/objects/AllRecibidos__c/recordTypes/Gravamen.recordType-meta.xml
<RecordType>
    <fullName>Gravamen</fullName>
    <active>true</active>
    <description>Recibo para la deuda de un vehículo a ser comprado</description>
    <label>Gravamen</label>
</RecordType>