force-app/main/default/objects/AllRecibidos__c/recordTypes/Intercambio.recordType-meta.xml
<RecordType>
    <fullName>Intercambio</fullName>
    <active>true</active>
    <description>Recibo para la entrega de dinero al cliente</description>
    <label>Depósito al cliente</label>
</RecordType>