force-app/main/default/objects/AllRecibidos__c/recordTypes/Principal.recordType-meta.xml
<RecordType>
    <fullName>Principal</fullName>
    <active>true</active>
    <description>Recibo que viene de caja/Acreditar al código</description>
    <label>Principal</label>
</RecordType>