force-app/main/default/objects/AllRecibidos__c/validationRules/Intercambio_autolote_si_tiene_vehiculo.validationRule-meta.xml
<ValidationRule>
    <fullName>Intercambio_autolote_si_tiene_vehiculo</fullName>
    <active>true</active>
    <description>Si el recibo es principal y tiene vehiculo, el unico instrumento de pago es el Intercambio autolote</description>
    <errorConditionFormula>AND(
  RecordType.DeveloperName = &quot;Principal&quot;,
  NOT(ISBLANK(Vehiculo__c)),
  NOT(ISPICKVAL(Instrumento_de_pago__c, &quot;Intercambio Autolote&quot;))
)</errorConditionFormula>
    <errorMessage>Si incluye un vehículo el instrumento de pago debe ser Intercambio Autolote</errorMessage>
</ValidationRule>