force-app/main/default/objects/AllRecibidos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CodigoCliente__c</columns>
    <columns>Cliente__c</columns>
    <columns>NumeroRecibido__c</columns>
    <columns>Motivo__c</columns>
    <columns>MontoAplicado__c</columns>
    <columns>Fecha__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Codigo_de_Cliente__c</field>
        <operation>equals</operation>
        <value>1419761</value>
    </filters>
    <label>Todos</label>
</ListView>